# sonos-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  compound-engineering.local.md  release-plz.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-title.yml  release-plz.yml  release.yml
docs/: goals.md
docs/brainstorm/: 2026-03-01-product-docs-brainstorm.md  2026-03-01-sonos-cli-architecture-brainstorm.md  2026-03-02-cli-command-reference-brainstorm.md
docs/brainstorms/: 2026-03-08-sdk-caching-brainstorm.md  2026-03-10-cli-architecture-simplification-brainstorm.md  2026-03-13-friendly-speaker-names-brainstorm.md  2026-03-14-cross-repo-release-pipeline-brainstorm.md  2026-03-22-discovery-failure-diagnostics-brainstorm.md  2026-03-28-cli-logging-brainstorm.md  2026-03-28-fix-event-init-propagation-brainstorm.md  2026-03-29-tui-hooks-architecture-brainstorm.md  2026-04-04-speakers-list-widget-brainstorm.md
docs/product/: prd.md  (+1 more)
src/: actions.rs  cache.rs  config.rs  diagnostics.rs  errors.rs  executor.rs  generate.rs  lib.rs  logging.rs  main.rs
todos/: 001-pending-p1-revert-to-transparent-auto-rediscovery.md  002-pending-p1-state-manager-add-devices-missing.md  003-pending-p1-add-tracing-sdk-dependency.md  004-pending-p2-log-cache-save-errors.md  005-pending-p2-validate-cache-paths.md  006-complete-p2-group-topology-after-rediscovery.md  007-pending-p2-update-claude-md-and-roadmap.md  008-pending-p2-add-lock-poisoned-error-variant.md  009-pending-p2-reject-future-cached-at-timestamps.md  010-complete-p3-temp-file-cleanup-and-device-count.md  011-complete-p3-rediscovery-cooldown.md  012-pending-p1-restore-explicit-discovery-command.md  013-complete-p2-stderr-diagnostic-on-auto-rediscovery.md  015-complete-p2-update-cli-commands-doc-stale-references.md  016-complete-p2-remove-max-cache-size-guard.md  018-complete-p3-consistent-error-message-capitalization.md  019-complete-p3-extract-now-secs-helper.md  020-complete-p1-small-terminal-threshold-mismatch.md  021-complete-p1-fetch-in-render-path-blocks-event-loop.md  022-complete-p1-progress-states-not-repopulated-after-topology-change.md  023-complete-p1-eprintln-corrupts-tui-in-raw-mode.md  024-complete-p2-watch-group-trait-bounds-wont-compile.md  025-complete-p2-use-mem-take-instead-of-split-off.md  026-complete-p2-swap-watch-handles-should-take-mut-self.md  027-complete-p3-consider-simpler-clear-before-draw.md  028-complete-p1-stale-index-panic-in-group-for-entry.md  029-complete-p2-replace-parallel-vecs-with-struct.md  030-complete-p2-add-speakers-state-methods-to-screen.md  031-complete-p2-consolidate-esc-pick-up-handling.md  032-complete-p3-delete-dead-modal-widget.md  033-complete-p3-inline-home-speakers-screen.md  034-complete-p3-extract-volume-spans-helper.md  035-complete-p3-minor-cleanups-unused-param-type-alias-truncation.md
(+58 files in other folders)
