[package]
name = "sonos-cli"
version = "0.1.1"
edition = "2021"
description = "CLI and TUI for controlling Sonos speakers"
license = "MIT"
repository = "https://github.com/tatimblin/sonos-cli"
homepage = "https://github.com/tatimblin/sonos-cli"
readme = "README.md"
keywords = ["sonos", "cli", "tui", "audio", "speakers"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = ["docs/", ".github/", ".claude/", ".kiro/", "todos/", "CLAUDE.md", "AGENTS.md"]

[lib]
name = "sonos_cli"
path = "src/lib.rs"

[[bin]]
name = "sonos"
path = "src/main.rs"

[[example]]
name = "sonos-generate"
path = "src/generate.rs"
required-features = ["generate"]

[features]
generate = ["dep:clap_complete", "dep:clap_mangen"]
test-helpers = ["sonos-sdk/test-support"]

[dependencies]
# Sonos SDK
sonos-sdk = "0.2"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = "3"
image = "0.25"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config directory
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "2"

# Shell completions and man pages (optional, for generate binary)
clap_complete = { version = "4", optional = true }
clap_mangen = { version = "0.2", optional = true }

[dev-dependencies]
sonos-sdk = { version = "0.2", features = ["test-support"] }
proptest = "1"
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
tap = "tatimblin/homebrew-tap"
publish-jobs = ["homebrew"]
pr-run-mode = "plan"
allow-dirty = ["ci"]
install-path = "CARGO_HOME"

[[workspace.metadata.dist.extra-artifacts]]
artifacts = [
    "completions/sonos.bash",
    "completions/_sonos",
    "completions/sonos.fish",
    "completions/_sonos.ps1",
    "man/sonos.1",
]
build = ["cargo", "run", "--features", "generate", "--example", "sonos-generate", "--", "--out-dir", "."]
